feat: Support ANDROID 16kb MEMORY PAGE

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,14 @@
 buildscript {
+    ext.kotlin_version = "2.0.0"
+
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:7.2.1"
+        classpath "com.android.tools.build:gradle:8.7.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -48,7 +51,10 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags "-O2 -frtti -fexceptions -Wall -fstack-protector-all"
-                arguments "-DANDROID_STL=c++_shared"
+                // 링커 플래그에 max-page-size=16384 추가
+                arguments "-DANDROID_STL=c++_shared",
+                          "-DCMAKE_SHARED_LINKER_FLAGS=-Wl,-z,max-page-size=16384"
+
                 abiFilters(*reactNativeArchitectures())
             }
         }
@@ -94,22 +100,25 @@ android {
         disable "GradleCompatible"
     }
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+compileOptions {
+        // [설정] Kotlin 2.x 및 최신 AGP는 Java 17 이상이 필수입니다.
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    // [추가] Kotlin 컴파일 옵션 (JVM 타겟 17 설정)
+    kotlinOptions {
+        jvmTarget = "17"
     }
 
     sourceSets {
         main {
             if (isNewArchitectureEnabled()) {
-                java.srcDirs += [
-                        // React Codegen files
-                        "${project.buildDir}/generated/source/codegen/java"]
+                java.srcDirs += ["${project.buildDir}/generated/source/codegen/java"]
             }
         }
     }
 }
-
 repositories {
     mavenCentral()
     google()
@@ -136,6 +145,13 @@ dependencies {
     // simple camerax library (Not necessary)
     implementation 'io.github.lucksiege:camerax:v3.11.2'
 
+    // [Fix] For 16KB Page Size Support, CameraX Version 1.4.0+ Force Update
+    def camerax_version = "1.4.0" // 최신 안정 버전 사용
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-view:${camerax_version}"
+
     // exoplayer
     implementation "com.google.android.exoplayer:exoplayer:2.19.1"
 
@@ -144,6 +160,8 @@ dependencies {
 
     // Add a dependency on NitroModules
     implementation project(":react-native-nitro-modules")
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
 
 if (isNewArchitectureEnabled()) {
